<resources>
    <string name="app_name">AdminBlinkitClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="product_details">Please fill product details!</string>
    <string name="product_title">Product Title</string>
    <string name="quantity">Quantity(1kg, 1ltr)</string>
    <string name="unit">Unit</string>
    <string name="price_in_rupees">Price (in rupees)</string>
    <string name="no_of_stock">No. of Stock</string>
    <string name="product_category">Product Category</string>
    <string name="product_type">Product Type</string>
    <string name="select_image">Please select some images</string>
    <string name="button_image">Button Image</string>
    <string name="add_product">Add Product</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="_25">$25</string>
    <string name="title">Nandini Toned Freash Milk alda aloie hbeh euhfoen oiefjf</string>
    <string name="_500ml">500ml</string>
</resources>