<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragments.AddProductFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:titleTextColor="@color/white"
        app:title="Add Product"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/product_details"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="2dp"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:cursorColor="@color/yellow"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/product_title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/quantity"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    app:cursorColor="@color/yellow"
                    app:hintTextColor="@color/yellow">

                    <AutoCompleteTextView
                        android:id="@+id/etProductUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">
<!--                                pro cat -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/price_in_rupees"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
<!--                     no of stock    -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductStock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/no_of_stock"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

<!--            product category    -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:cursorColor="@color/yellow"
                app:startIconDrawable="@drawable/ic_category"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/etProductCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/blue"
                    android:paddingStart="40dp"
                    android:hint="@string/product_category"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            Product type        -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:cursorColor="@color/yellow"
                app:startIconDrawable="@drawable/ic_category"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/etProductType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/blue"
                    android:paddingStart="40dp"
                    android:hint="@string/product_type"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/select_image"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <ImageButton
                    android:id="@+id/btnSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_image"
                    android:src="@drawable/ic_add_photo"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductImages"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_view_image_selection"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddProduct"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_margin="13dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/add_product"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="10dp"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>